@@ -114,21 +114,6 @@ name|solr
 operator|.
 name|common
 operator|.
-name|params
-operator|.
-name|UpdateParams
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|common
-operator|.
 name|util
 operator|.
 name|ContentStreamBase
@@ -339,6 +324,19 @@ operator|.
 name|processor
 operator|.
 name|UpdateRequestProcessorChain
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|util
+operator|.
+name|SolrPluginUtils
 import|;
 end_import
 begin_import
@@ -1232,13 +1230,13 @@ argument_list|()
 operator|.
 name|getUpdateProcessingChain
 argument_list|(
-name|params
+name|SolrPluginUtils
 operator|.
-name|get
+name|resolveUpdateChainParam
 argument_list|(
-name|UpdateParams
-operator|.
-name|UPDATE_CHAIN
+name|params
+argument_list|,
+name|LOG
 argument_list|)
 argument_list|)
 decl_stmt|;
