@@ -52,21 +52,6 @@ name|solr
 operator|.
 name|common
 operator|.
-name|params
-operator|.
-name|UpdateParams
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|common
-operator|.
 name|util
 operator|.
 name|ContentStream
@@ -126,6 +111,19 @@ operator|.
 name|processor
 operator|.
 name|UpdateRequestProcessorChain
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|util
+operator|.
+name|SolrPluginUtils
 import|;
 end_import
 begin_import
@@ -197,78 +195,6 @@ operator|.
 name|getParams
 argument_list|()
 decl_stmt|;
-name|String
-name|updateChainName
-init|=
-literal|null
-decl_stmt|;
-if|if
-condition|(
-name|params
-operator|.
-name|get
-argument_list|(
-name|UpdateParams
-operator|.
-name|UPDATE_CHAIN_DEPRECATED
-argument_list|)
-operator|!=
-literal|null
-condition|)
-block|{
-name|log
-operator|.
-name|warn
-argument_list|(
-literal|"Use of deprecated update request parameter "
-operator|+
-name|UpdateParams
-operator|.
-name|UPDATE_CHAIN_DEPRECATED
-operator|+
-literal|" detected. Please use the new parameter "
-operator|+
-name|UpdateParams
-operator|.
-name|UPDATE_CHAIN
-operator|+
-literal|" instead, as support"
-operator|+
-literal|" for "
-operator|+
-name|UpdateParams
-operator|.
-name|UPDATE_CHAIN_DEPRECATED
-operator|+
-literal|" will be removed in a later version."
-argument_list|)
-expr_stmt|;
-name|updateChainName
-operator|=
-name|params
-operator|.
-name|get
-argument_list|(
-name|UpdateParams
-operator|.
-name|UPDATE_CHAIN_DEPRECATED
-argument_list|)
-expr_stmt|;
-block|}
-else|else
-block|{
-name|updateChainName
-operator|=
-name|params
-operator|.
-name|get
-argument_list|(
-name|UpdateParams
-operator|.
-name|UPDATE_CHAIN
-argument_list|)
-expr_stmt|;
-block|}
 name|UpdateRequestProcessorChain
 name|processorChain
 init|=
@@ -279,7 +205,14 @@ argument_list|()
 operator|.
 name|getUpdateProcessingChain
 argument_list|(
-name|updateChainName
+name|SolrPluginUtils
+operator|.
+name|resolveUpdateChainParam
+argument_list|(
+name|params
+argument_list|,
+name|log
+argument_list|)
 argument_list|)
 decl_stmt|;
 name|UpdateRequestProcessor
