@@ -298,6 +298,19 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|util
+operator|.
+name|SolrPluginUtils
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|update
 operator|.
 name|MergeIndexesCommand
@@ -1271,13 +1284,13 @@ name|core
 operator|.
 name|getUpdateProcessingChain
 argument_list|(
-name|params
+name|SolrPluginUtils
 operator|.
-name|get
+name|resolveUpdateChainParam
 argument_list|(
-name|UpdateParams
-operator|.
-name|UPDATE_CHAIN
+name|params
+argument_list|,
+name|log
 argument_list|)
 argument_list|)
 decl_stmt|;
